--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,38 +1,19 @@
 {% extends 'base.twig' %}
 
 {% block body %}
-<div class="container">
     <h1 class="mb-3 mt-3">ТЫ на страницы картин!</h1>
+
+    <div class="container">
     <div class="row">
          <div class="col-md-9">
-             {% for post in posts %}
-             <div class="row mb-2 bg-light" style="border: 1px solid #ccc">
-                 <div class="p-3">
+             {% include 'section/posts.twig' with posts %}
 
-                         {%  if post.img_path != ''%}
-                             <img src="{{ post.img_path }}" class="card-img-top" alt="{{ post.title|escape }}">
-                         {% else %}
-                             <img src="img/les.jpg" class="card-img-top" alt="{{ post.title|escape }}">
-                         {% endif %}
-                         <div class="mt-3">
-                             <a href="/{{ post.url_key }}" ><h5 class="card-title">{{ post.title|escape }}</h5></a>
-                             <p class="mt-2">{{ post.description|escape }}</p>
-                             <span class="text-muted">  {{ post.published_date|date("F d ,Y")}} </span>
-                             <a href="/{{ post.url_key }}" class="btn btn-primary">Подробнее</a>
-                         </div>
-
-                 </div>
-             </div>
-             {% endfor %}
              <div class="row">
-                 <a href="/blog"> Blog</a>
+                 <a href="{{ url('gallery') }}"> Blog</a>
              </div>
         </div>
         <div class="col-md-3">
-            <div class="container">
-                <h1> !!!</h1>
-                <p>Привет неизвестный </p>
-            </div>
+            {% include 'section/about.twig' %}
         </div>
     </div>
 </div>
