--- a/templates/post.twig
+++ b/templates/post.twig
@@ -2,9 +2,9 @@
 {% block body %}
     <div class="container">
         {%  if post.img_path != ''%}
-            <img src="{{ post.img_path }}" class="card-img-top" alt="{{ post.title|escape }}">
+            <img src="{{ asset_url(post.img_path) }}" class="card-img-top" alt="{{ post.title|escape }}">
         {% else %}
-            <img src="img/les.jpg" class="card-img-top" alt="{{ post.title|escape }}">
+            <img src="{{ asset_url('img/les.jpg') }}" class="card-img-top" alt="{{ post.title|escape }}">
         {% endif %}
         <h1 class="mt-5 mb-2"> {{ post.title|escape}}</h1>
         <div class="row">
