--- a/templates/section/navigetion.twig
+++ b/templates/section/navigetion.twig
@@ -1,17 +1,17 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="/">Картины</a>
+        <a class="navbar-brand" href="{{ base_url() }}">Картины</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Все статьи<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url('gallery') }}">Все статьи<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Связь</a>
+                    <a class="nav-link" href="{{ url('about') }}">Связь</a>
                 </li>
             </ul>
         </div>
